2008-05-26  Marcus D. Hanwell  <marcus@cryos.org>

	* avogadro/src/mainwindow.cpp: Fixed PR 1973714 - removed the file
	ending from the file name passed to the save dialog. Also placed the
	macchempasteboard.h in a Mac ifdef to fix compilation on other OSes.

2008-05-27  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/drawtool.cpp: Do not try to change the bond
	order for X-H bonds when adjust hydrogens is on. Not sure if we should
	ever have double bonds to hydrogens...

2008-05-26  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/src/CMakeLists.txt,
	avogaro/src/mac/locversion.plist.in: Add additional Mac i18n
	support, solving PR#1972467.

	* Doxyfile, avogadro/src/mainwindow.h, 
	libavogadro/src/*: Update doxygen documentation.

	* avogadro/src/macchempasteboard.*: Add mime converter to supply
	MIME types for Mac chemical clipboard/pasteboard types
	(i.e. ChemDraw).

	* avogadro/src/mainwindow.cpp: Add support for ChemDraw. Doesn't
	parse -- need more debugging.

2008-05-23  Marcus D. Hanwell  <marcus@cryos.org>

	* CMakeLists.txt: Bump our dependencies on CMake and Qt.

2008-05-22  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/insertfragmentdialog.cpp: Fix insert smiles.
	Also disable the driectoryTreeView and smilesLineEdit while in insert
	mode. This makes it impossible to change the smiles and forget to
	press Stop/Start.

2008-05-22  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/python/deleteAll.py: Fixed the
	deleteAll script for the new DeleteAtom function signature.

	* libavogadro/src/extensions/pythonextension.cpp: Search the system
	wide path for Python scripts too.

	* libavogadro/src/extensions/hydrogensextension.cpp: Fixed PR 1947734, 
	now the number of hydrogrens most people would expect are added....

2008-05-20  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	Changes from the win32 build:
